--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=school-managment
+
 #############################################################
 #port
 server.port =  8080
@@ -26,3 +28,6 @@ logging.level.org.springframework.web=WARN
 logging.level.org.hibernate=INFO
 logging.level.com.project=INFO
 ###########################################################
+
+backendapi.app.jwtSecret=schoolmanagementproject
+backendapi.app.jwtExpirationMs=8640000
